stderr
OpenJDK 64-Bit Server VM warning: Options -Xverify:none and -noverify were deprecated in JDK 13 and will likely be removed in a future release.
Hiker.kt:8:16: error: function invocation 'toDouble()' expected
    return min.toDouble
               ^
